--- a/padogrid-deployment/pom.xml
+++ b/padogrid-deployment/pom.xml
@@ -116,33 +116,11 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
+				<version>${maven.complier.plugin.version}</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
 				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>3.1.0</version>
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>bundle-sources</id>
-						<phase>package</phase>
-						<goals>
-							<!-- produce source artifact for main project sources -->
-							<goal>jar-no-fork</goal>
-						</goals>
-					</execution>
-				</executions>
 			</plugin>
 
 			<!-- Additional padogrid assemblies -->
@@ -189,7 +167,7 @@
 				<version>2.5.5</version>
 				<executions>
 					<execution>
-						<id>Hazelcast 3.12</id>
+						<id>PadoGrid</id>
 						<goals>
 							<goal>attached</goal>
 						</goals>
