--- a/padogrid-mqtt/pom.xml
+++ b/padogrid-mqtt/pom.xml
@@ -20,15 +20,13 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 
 	<modelVersion>4.0.0</modelVersion>
-	<!-- <parent>
+	<parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-parent</artifactId>
 		<version>0.9.27-SNAPSHOT</version>
 	</parent>
-	-->
-	<groupId>padogrid.addon</groupId>
+
 	<artifactId>padogrid-mqtt</artifactId>
-	<version>0.9.27-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>${project.artifactId}</name>
 	<description>PadoGrid MQTT core library</description>
@@ -36,10 +34,6 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<log4j2.version>2.19.0</log4j2.version>
-		<paho.version>1.2.5</paho.version>
-		<snake.version>1.23</snake.version>
-		<bouncycastle.version>1.73</bouncycastle.version>
 		<skipTests>true</skipTests>
 	</properties>
 
@@ -110,7 +104,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
+				<version>${maven.complier.plugin.version}</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
@@ -119,12 +113,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>3.3.0</version>
-				<configuration>
-					<excludes>
-						<exclude>**/META-INF/maven/*</exclude>
-					</excludes>
-				</configuration>
+				<version>${maven.jar.plugin.version}</version>
 				<executions>
 					<execution>
 						<goals>
@@ -136,10 +125,24 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M3</version>
+				<version>${maven.surefire.plugin.verson}</version>
 				<configuration>
 					<skipTests>${skipTests}</skipTests>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>${maven.source.plugin.version}</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
