--- a/pom.xml
+++ b/pom.xml
@@ -38,9 +38,12 @@
 		<paho.version>1.2.5</paho.version>
 		<snake.version>1.23</snake.version>
 		<bouncycastle.version>1.73</bouncycastle.version>
-		<maven.jar.plugin.version>2.4</maven.jar.plugin.version>
+		<maven.jar.plugin.version>3.3.0</maven.jar.plugin.version>
 		<maven.javadoc.plugin.version>3.1.0</maven.javadoc.plugin.version>
 		<maven.shade.plugin.version>3.2.2</maven.shade.plugin.version>
+		<maven.complier.plugin.version>3.11.0</maven.complier.plugin.version>
+		<maven.surefire.plugin.verson>3.1.2</maven.surefire.plugin.verson>
+		<maven.source.plugin.version>3.3.0</maven.source.plugin.version>
 		<skipTests>true</skipTests>
 	</properties>
 
