Updated the MQTT Docker cluster with the latest simulator bundle

--- a/padogrid-deployment/src/main/resources/mosquitto/docker/compose/simulator.yaml
+++ b/padogrid-deployment/src/main/resources/mosquitto/docker/compose/simulator.yaml
@@ -1,9 +1,23 @@
+#
+# Copyright (c) 2023 Netcrest Technologies, LLC. All rights reserved.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+
 equations:
   - name: sine
     formula: y=sin(x)
     description: Sine wave
-    startTime: -1
-    timeInterval: 500
     minBase: -1
     maxBase: 1
     baseSpread: 0.1
@@ -12,8 +26,6 @@ equations:
   - name: dampedSineWave
     formula: y=2e^(-2x)sin(2*pi*x/.5)
     description: Damped sine wave
-    startTime: -1
-    timeInterval: 500
     minBase: 0
     maxBase: 2
     baseSpread: 0.1
@@ -22,7 +34,6 @@ equations:
   - name: heartbeat
     formula: y=sin(x)^63*sin(x+1.5)*8
     description: heartbeat
-    timeInterval: 500
     minBase: 0
     maxBase: 2
     baseSpread: 0.05
@@ -32,14 +43,12 @@ equations:
   - name: tan
     formula: y=tan(x)
     description: tan
-    timeInterval: 500
     baseSpread: 0.1
     jitter: 0.1
     calculationFunction: java.lang.Math.tan
   - name: tanh
     formula: y=tanh(x)
     description: tanh
-    timeInterval: 500
     minBase: 0
     maxBase: 5
     baseSpread: 0.1
@@ -48,239 +57,252 @@ equations:
   - name: exp
     formula: y=e^x
     description: exp
-    timeInterval: 500
     baseSpread: 0.1
     jitter: 0.1
     calculationFunction: java.lang.Math.exp
   - name: circle
     formula: y=sqrt(1-x*x)
     description: circle
-    timeInterval: 500
     baseSpread: 0.1
     jitter: 0.1
     calculationFunction: padogrid.simulator.eq.Equations.circle
   - name: decay
-    formula: y=sqrt(1-x*x)
+    formula: y=e^(-x/5)
     description: decay
-    timeInterval: 500
-    minBase: 0
-    maxBase: 1000
+    minBase: -20
+    maxBase: 10
+    baseSpread: 0.1
+    jitter: 3
+    calculationFunction: padogrid.simulator.eq.Equations.decay
+  - name: expDecay
+    formula: y=e^(-x)
+    description: exponential decay
+    minBase: -2
+    maxBase: 4
     baseSpread: 0.1
     jitter: 0.1
-    calculationFunction: padogrid.simulator.eq.Equations.decay
+    calculationFunction: padogrid.simulator.eq.Equations.expDecay
   - name: linear
     formula: y=x+1
     description: linear
-    timeInterval: 500
     baseSpread: 0.1
     jitter: 0.1
     calculationFunction: padogrid.simulator.eq.Equations.linear
   - name: quadratic
-    formula: y=x^2+1
+    formula: y=x^2+x+1
     description: quadratic
-    timeInterval: 500
     baseSpread: 0.1
     jitter: 0.1
     calculationFunction: padogrid.simulator.eq.Equations.quadratic
   - name: cubic
     formula: y=x^3+x^2+x+1
     description: cubic
-    timeInterval: 500
     baseSpread: 0.1
     jitter: 0.1
     calculationFunction: padogrid.simulator.eq.Equations.cubic
   - name: quartic
     formula: y=x^4+x^3+x^2+x+1
     description: quartic
-    timeInterval: 500
     baseSpread: 0.1
     jitter: 0.1
     calculationFunction: padogrid.simulator.eq.Equations.quartic
   - name: quintic
     formula:  y=x^5+x^4+x^3+x^2+x+1
     description: quintic
-    timeInterval: 500
     baseSpread: 0.1
     jitter: 0.1
     calculationFunction: padogrid.simulator.eq.Equations.quintic
   - name: sextic
     formula:  y=x^6+x^5+x^4+x^3+x^2+x+1
     description: sextic
-    timeInterval: 500
     baseSpread: 0.1
     jitter: 0.1
     calculationFunction: padogrid.simulator.eq.Equations.sextic
   - name: septic
     formula:  y=x^7+x^6+x^5+x^4+x^3+x^2+x+1
     description: sextic
-    timeInterval: 500
     baseSpread: 0.1
     jitter: 0.1
     calculationFunction: padogrid.simulator.eq.Equations.septic
   - name: octic
     formula:  y=x^8+x^7+x^6+x^5+x^4+x^3+x^2+x+1
     description: octic
-    timeInterval: 500
     baseSpread: 0.1
     jitter: 0.1
     calculationFunction: padogrid.simulator.eq.Equations.octic
   - name: nontic
     formula:  y=x^9+x^8+x^7+x^6+x^5+x^4+x^3+x^2+x+1
     description: nontic
-    timeInterval: 500
     baseSpread: 0.1
     jitter: 0.1
     calculationFunction: padogrid.simulator.eq.Equations.nontic
   - name: decic
     formula:  y=x^9+x^8+x^7+x^6+x^5+x^4+x^3+x^2+x+1
     description: decic
-    timeInterval: 500
     baseSpread: 0.1
     jitter: 0.1
     calculationFunction: padogrid.simulator.eq.Equations.decic
 
-publishers:        
+publishers:            
   # MQTT
   - product: mqtt
     name: sine-publisher
-    equationName: sine
+    timeInterval: 500
+    equations:
+      equationNames: [sine]
     dataStructure:
       type: topic
       name: ${env:PADOGRID_TOPIC_PREFIX}/sine
-    timeInterval: 500
   - product: mqtt
     name: dampedSineWave-publisher
-    equationName: dampedSineWave
+    timeInterval: 500
+    equations:
+      equationNames: [dampedSineWave]
     dataStructure:
       type: topic
       name: ${env:PADOGRID_TOPIC_PREFIX}/dampedSineWave
-    timeInterval: 500
   - product: mqtt
     name: heartbeat-publisher
-    equationName: heartbeat
+    timeInterval: 30
+    equations:
+      equationNames: [heartbeat]
+      equationDelay: 30
     dataStructure:
       type: topic
       name: ${env:PADOGRID_TOPIC_PREFIX}/heartbeat
-    timeInterval: 40
   - product: mqtt
     name: tan-publisher
-    equationName: tan
+    timeInterval: 500
+    equations:
+      equationNames: [tan]
     dataStructure:
       type: topic
       name: ${env:PADOGRID_TOPIC_PREFIX}/tan
-    timeInterval: 500
   - product: mqtt
     name: tanh-publisher
-    equationName: tanh
+    timeInterval: 500
+    equations:
+      equationNames: [tanh]
     dataStructure:
       type: topic
       name: ${env:PADOGRID_TOPIC_PREFIX}/tanh
-    timeInterval: 500
   - product: mqtt
     name: exp-publisher
-    equationName: exp
+    timeInterval: 500
+    equations:
+      equationNames: [exp]
     dataStructure:
       type: topic
       name: ${env:PADOGRID_TOPIC_PREFIX}/exp
-    timeInterval: 500
   - product: mqtt
     name: circle-publisher
-    equationName: circle
+    timeInterval: 500
+    equations:
+      equationNames: [circle]
     dataStructure:
       type: topic
       name: ${env:PADOGRID_TOPIC_PREFIX}/circle
-    timeInterval: 500
   - product: mqtt
     name: decay-publisher
-    equationName: decay
+    timeInterval: 500
+    equations:
+      equationNames: [decay]
     dataStructure:
       type: topic
       name: ${env:PADOGRID_TOPIC_PREFIX}/decay
+  - product: mqtt
+    name: expDecay-publisher
     timeInterval: 500
+    equations:
+      equationNames: [expDecay]
+    dataStructure:
+      type: topic
+      name: ${env:PADOGRID_TOPIC_PREFIX}/expDecay
   - product: mqtt
     name: linear-publisher
-    equationName: linear
+    timeInterval: 500
+    equations:
+      equationNames: [linear]
     dataStructure:
       type: topic
       name: ${env:PADOGRID_TOPIC_PREFIX}/linear
-    timeInterval: 500
   - product: mqtt
     name: quadratic-publisher
-    equationName: quadratic
+    timeInterval: 500
+    equations:
+      equationNames: [quadratic]
     dataStructure:
       type: topic
       name: ${env:PADOGRID_TOPIC_PREFIX}/quadratic
-    timeInterval: 500
-    
   - product: mqtt
     name: cubic-publisher
-    equationName: cubic
+    timeInterval: 500
+    equations:
+      equationNames: [cubic]
     dataStructure:
       type: topic
       name: ${env:PADOGRID_TOPIC_PREFIX}/cubic
-    timeInterval: 500
-    
-  - product: mqtt
-    name: quadratic-publisher
-    equationName: quadratic
-    dataStructure:
-      type: topic
-      name: ${env:PADOGRID_TOPIC_PREFIX}/quadratic
-    timeInterval: 500
   - product: mqtt
     name: quartic-publisher
-    equationName: quartic
+    timeInterval: 500
+    equations:
+      equationNames: [quartic]
     dataStructure:
       type: topic
       name: ${env:PADOGRID_TOPIC_PREFIX}/quartic
-    timeInterval: 500
-    
   - product: mqtt
     name: quintic-publisher
-    equationName: quintic
+    timeInterval: 500
+    equations:
+      equationNames: [quintic]
     dataStructure:
       type: topic
       name: ${env:PADOGRID_TOPIC_PREFIX}/quintic
-    timeInterval: 500  
   - product: mqtt
     name: circle-publisher
-    equationName: circle
+    timeInterval: 500
+    equations:
+      equationNames: [circle]
     dataStructure:
       type: topic
       name: ${env:PADOGRID_TOPIC_PREFIX}/circle
-    timeInterval: 500
   - product: mqtt
     name: sextic-publisher
-    equationName: sextic
+    timeInterval: 500
+    equations:
+      equationNames: [sextic]
     dataStructure:
       type: topic
       name: ${env:PADOGRID_TOPIC_PREFIX}/sextic
-    timeInterval: 500
   - product: mqtt
     name: septic-publisher
-    equationName: septic
+    timeInterval: 500
+    equations:
+      equationNames: [septic]
     dataStructure:
       type: topic
       name: ${env:PADOGRID_TOPIC_PREFIX}/septic
-    timeInterval: 500
   - product: mqtt
     name: octic-publisher
-    equationName: octic
+    timeInterval: 500
+    equations:
+      equationNames: [octic]
     dataStructure:
       type: topic
       name: ${env:PADOGRID_TOPIC_PREFIX}/octic
-    timeInterval: 500
   - product: mqtt
     name: nontic-publisher
-    equationName: nontic
+    timeInterval: 500
+    equations:
+      equationNames: [nontic]
     dataStructure:
       type: topic
       name: ${env:PADOGRID_TOPIC_PREFIX}/nontic
-    timeInterval: 500
   - product: mqtt
     name: decic-publisher
-    equationName: decic
+    timeInterval: 500
+    equations:
+      equationNames: [decic]
     dataStructure:
       type: topic
       name: ${env:PADOGRID_TOPIC_PREFIX}/decic
-    timeInterval: 500
