Added subscriptions support for IHaMqttConnectorSubscriber

--- a/padogrid-deployment/src/main/resources/mqtt/apps/perf_test/etc/mqttv5-client.yaml
+++ b/padogrid-deployment/src/main/resources/mqtt/apps/perf_test/etc/mqttv5-client.yaml
@@ -67,12 +67,78 @@ persistence:
   properties:
     - key: path
       value: ${persistence.dir}
+    
+# Optional 'plugins' specifies a list of plugin classes such as connectors that 
+# implement padogrid.mqtt.client.cluster.IHaMqttPlugin for applying application
+# specific logic on published and/or received data. Connectors may cleanse, filter
+# and/or transform data, save data to databases, stream data to another product
+# such as Kafka and data grids, plot real-time data, and etc.
+# 
+# The plugins come in three flavors: IHaMqttPlugin, IHaMqttConnectorPublisher,
+# IHaMqttConnectorSubscriber.
+#
+#   - IHaMqttPlugin - Application plugin. Starts during the application startup
+#     time and has no association with virtual clusters.
 
+#   - IHaMqttConnectorPublisher - Publisher connector. Launches during cluster
+#     initialization. Responsible for intercepting publishing or published messages
+#     by the application.
+#
+#   - IHaMqttConnectorSubscriber - Subscriber connector. Luanches during cluster
+#     initialization. Responsible for intercepting subscribed messages.
+#
+# Example:
+#   - name: plugin_name
+#     enabled: true
+#     className: myplugins.QuestDbJsonConnector
+#     properties:
+#       - key: endpoint
+#         value: localhost:9090
+#       - key: callback
+plugins:
+    # Plugin name. If null, then the plugin cannot and will never be created.
+  - name: null
+    # Optional plugin description.
+    description: null
+    # true enable, false to disable. If disabled, the plugin is not created.
+    enabled: true
+    # Plugin context. The plugin context determines the plugin bootstrap
+    # environment. Valid values are CLUSTER, APP. If CLUSTER, the plugin is
+    # associated with the cluster that has the matching 'pluginName' value
+    # and launched during the cluster initialization time. If APP, then
+    # the plugin is launched after the cluster service is initialized.
+    # For IHaMqttConnectorPublisher and IHaMqttConnectorSubscriber, the
+    # 'context' value is always CLUSTER.
+    # Default: CLUSTER
+    context: CLUSTER
+    # Fully-qualified class that implements padogrid.mqtt.client.cluster.IHaMqttPlugin.
+    # If null, then the connector cannot be created.
+    className: null
+    # Initialization properties passed into the 'init(Properties)' method.
+    properties: null
+      #- key:
+      #  value: null
+    # The 'subscriptions' element is for IHaMqttConnectorSubscriber plugins
+    # to automatically subscribe to the specified topic filters. For other plugin
+    # types, i.e., IHaMqttConnectorPublisher and IHaMqttPlugin, this element
+    # may be used explicitly in the plugin implementation.
+    subscriptions:
+        # Topic filters for IHaMqttConnectorSubscriber. IHaMqttConnectorSubscriber
+        # automatically subscribes to the specified topic filters.
+      - topicFilters: []
+        # QoS for the topic filters. Valid values are 0, 1, 2. If it is invalid or
+        # unspecified, then it defaults to 1.
+        # Default: 1
+        qos: 1
+      
 # Cluster definitions. HaMqttClient supports multiple clusters.
 clusters:
     # Unique cluster name. Each cluster name defined in this file must be unique.
     # Default: cluster-default
   - name: ${cluster.name}
+  
+    # Optional cluster description.
+    description: MQTT virtual cluster for perf_test client
   
     # true to enable the cluster, false to disable.
     # Default: true
@@ -186,6 +252,11 @@ clusters:
         # Topic base to bound topics published to this endpoint. It overrides
         # publisherTopicBase.
         topicBase: null
+
+    # Optional connector name. Define the plugin under the 'plugins'
+    # element and specify its name here to activate it for this cluster.
+    # Default: null
+    pluginName: null
     
     # HaMqttClient provides a bridge service incomming and outgoing messages.
     # Incoming messages are the ones that are received by this application from
@@ -208,10 +279,11 @@ clusters:
           topicFilters: []
           
           # Set qos to override the caller's qos value. It must be a valid number,
-          # i.e., 0, 1, or 2; otherwise, it is ignored and the caller's qos is used.
-          # Note that qos is for forwarding (publishing) messages.
-          # Default: -1
-          qos: -1
+          # i.e., 0, 1, or 2; otherwise, it deaults to 1.
+          # Note that qos is for subscribing to the topic filters as well as forwarding
+          # (publishing) messages.
+          # Default: 1
+          qos: 1
         
       # 'out' sends outgoing messages to the target clusters. 
       # Note that unlike 'in', 'out' does not suffer from a single point
@@ -234,11 +306,12 @@ clusters:
           topicFilters: []
           
           # Set qos to override the caller's qos value. It must be a valid number,
-          # i.e., 0, 1, or 2; otherwise, it is ignored and the caller's qos is used.
-          # Note that qos is for forwarding (publishing) messages.
-          # Default: -1
-          qos: -1
-      
+          # i.e., 0, 1, or 2; otherwise, it defaults to 1. Unlike the 'in' bridge,
+          # this value may never be used for the 'out' bridge, since the qos
+          # specified by the caller overrides it.
+          # Default: 1
+          qos: 1
+
     connections:
       # tls uses an internal socket factory for SSL connections
       - tls:
