--- a/padogrid-mqtt/etc/mqttv5-bridge-publisher.yaml
+++ b/padogrid-mqtt/etc/mqttv5-bridge-publisher.yaml
@@ -13,7 +13,8 @@ clusters:
       out:  
         - cluster: bridge-publisher-enterprise
           topicFilters: [test/#]
-          qos: 0
+          # The following qos value has no effect since the caller's qos overrides it.
+          qos: 1
         
   - name: bridge-publisher-enterprise
     connections:
