--- a/padogrid-mqtt/etc/mqttv5-connector.yaml
+++ b/padogrid-mqtt/etc/mqttv5-connector.yaml
@@ -18,6 +18,9 @@ plugins:
     properties:
       - key: endpoint
         value: localhost:9009
+    subscriptions:
+      - topicFilters: [test/#]
+        qos: 2
       
 clusters:
   - name: connector
