Added cluster-level persistence for HaMqttClient

--- a/padogrid-deployment/src/main/resources/mqtt/apps/perf_test/etc/mqttv5-client.yaml
+++ b/padogrid-deployment/src/main/resources/mqtt/apps/perf_test/etc/mqttv5-client.yaml
@@ -218,7 +218,7 @@ clusters:
     liveEndpointPoolEnabled: true
     
     # Publisher Type. Valid values are STICKY, RANDOM, ROUND_ROBIN, ALL.
-    #   STICKY - Use one server for all publications.
+    #   STICKY - Use the same server for all publications.
     #   RANDOM - Randomly select one server from the live list for each publication.
     #   ROUND_ROBIN - Select the next server from the live list for each publication.
     #   ALL - Publish each message to all servers in the live list.
