--- a/padogrid-mqtt/src/main/resources/mqttv5-client.yaml
+++ b/padogrid-mqtt/src/main/resources/mqttv5-client.yaml
@@ -310,6 +310,13 @@ clusters:
           # Default: 1
           qos: 1
 
+    # Persistence for this cluster. If undefined then it defaults to the the global
+    # persistence which defaults to MemoryPersistence if undefined.
+    persistence:
+      className: MemoryPersistence
+      properties: null
+
+    # Endpoint connections.
     connections:
       # tls uses an internal socket factory for SSL connections
       - tls:
