--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,8 @@
 		<log4j2.version>2.19.0</log4j2.version>
 		<paho.version>1.2.5</paho.version>
 		<snake.version>1.23</snake.version>
-		<bouncycastle.version>1.73</bouncycastle.version>
+      <json.version>20230227</json.version>
+		<bouncycastle.version>1.74</bouncycastle.version>
 		<maven.jar.plugin.version>3.3.0</maven.jar.plugin.version>
 		<maven.javadoc.plugin.version>3.1.0</maven.javadoc.plugin.version>
 		<maven.shade.plugin.version>3.2.2</maven.shade.plugin.version>
