--- a/geode-addon-core/pom.xml
+++ b/geode-addon-core/pom.xml
@@ -147,7 +147,7 @@
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
-			<version>20200518</version>
+         <version>${json.version}</version>
 		</dependency>
 
 		<!-- For domain classes -->
