--- a/hazelcast-addon-common/pom.xml
+++ b/hazelcast-addon-common/pom.xml
@@ -33,7 +33,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<hazelcast.version>5.0-BETA-2</hazelcast.version>
+		<hazelcast.version>5.3.2</hazelcast.version>
 		<spring.version>5.2.1.RELEASE</spring.version>
 		<skipTests>true</skipTests>
 	</properties>
@@ -130,7 +130,7 @@
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
-			<version>20200518</version>
+         <version>${json.version}</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5 -->
