--- a/hazelcast-addon-jet-core-4/pom.xml
+++ b/hazelcast-addon-jet-core-4/pom.xml
@@ -77,7 +77,7 @@
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
-			<version>20200518</version>
+         <version>${json.version}</version>
 		</dependency>
 
 		<!-- padogrid -->
