--- a/padogrid-all/padogrid-hazelcast-all-3/pom.xml
+++ b/padogrid-all/padogrid-hazelcast-all-3/pom.xml
@@ -207,7 +207,7 @@
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
-			<version>20200518</version>
+         <version>${json.version}</version>
 		</dependency>
 	</dependencies>
 
