--- a/redisson-addon-core/pom.xml
+++ b/redisson-addon-core/pom.xml
@@ -155,7 +155,7 @@
 		<dependency>
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
-			<version>20200518</version>
+         <version>${json.version}</version>
 		</dependency>
 	</dependencies>
 
