--- a/padogrid-all/padogrid-jet-all-3/pom.xml
+++ b/padogrid-all/padogrid-jet-all-3/pom.xml
@@ -26,7 +26,7 @@
 	<parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-all</artifactId>
-		<version>0.9.28-SNAPSHOT</version>
+		<version>0.9.28</version>
 	</parent>
 	<artifactId>padogrid-jet-all-3</artifactId>
 	<packaging>jar</packaging>
