--- a/padogrid-deployment/src/main/resources/common/k8s/padogrid.yaml
+++ b/padogrid-deployment/src/main/resources/common/k8s/padogrid.yaml
@@ -106,7 +106,7 @@ spec:
   - name: geode-pulse
     protocol: TCP
     port: 7070
-    targetPort: hazelcast-mc
+    targetPort: geode-pulse
   - name: prometheus
     protocol: TCP
     port: 9090
