--- a/padogrid-deployment/src/main/resources/hazelcast/etc/template-hazelcast-indexes-3.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/etc/template-hazelcast-indexes-3.yaml
@@ -86,13 +86,20 @@ hazelcast:
       enabled: false
     ssl:
       enabled: false
-  
-  native-memory:
-    enabled: true
-    size:
-      unit: MEGABYTES
-      value: 512
 
+  # Indexes for nw data
+  map:
+    nw/customers:
+      indexes:
+        country:
+          ordered: false
+    nw/orders:
+      indexes:
+        freight:
+          ordered: true
+        shipVia:
+          ordered: false
+    
   executor-service:
     hz:query:
       pool-size: 16
