Added support for multiple plugins per cluster in HaMqttClient

--- a/padogrid-mqtt/src/main/resources/mqttv5-client.yaml
+++ b/padogrid-mqtt/src/main/resources/mqttv5-client.yaml
@@ -102,7 +102,7 @@ plugins:
     enabled: true
     # Plugin context. The plugin context determines the plugin bootstrap
     # environment. Valid values are CLUSTER, APP. If CLUSTER, the plugin is
-    # associated with the cluster that has the matching 'pluginName' value
+    # associated with the cluster that has the matching 'pluginNames' value
     # and launched during the cluster initialization time. If APP, then
     # the plugin is launched after the cluster service is initialized.
     # For IHaMqttConnectorPublisher and IHaMqttConnectorSubscriber, the
@@ -251,10 +251,10 @@ clusters:
         # publisherTopicBase.
         topicBase: null
 
-    # Optional connector name. Define the plugin under the 'plugins'
+    # Optional connector name list. Define the plugin under the 'plugins'
     # element and specify its name here to activate it for this cluster.
     # Default: null
-    pluginName: null
+    pluginNames: []
     
     # HaMqttClient provides a bridge service incomming and outgoing messages.
     # Incoming messages are the ones that are received by this application from
@@ -270,10 +270,12 @@ clusters:
           # Target cluster name. Undefined cluster names are logged and discarded.
           # If the target cluster name is the parent cluster name, then it is logged
           # and discarded.
+          # Default: null
         - cluster: null
         
           # A list of topic filters from which the topics are to be filtered
           # and forwarded to the target cluster.
+          # Default: null
           topicFilters: []
           
           # Set qos to override the caller's qos value. It must be a valid number,
@@ -301,6 +303,7 @@ clusters:
         
           # A list of topic filters from which the topics are to be filtered
           # before sending messages.
+          # Default: null
           topicFilters: []
           
           # Set qos to override the caller's qos value. It must be a valid number,
