--- a/padogrid-deployment/src/main/resources/kafka/apps/perf_test/pom.xml
+++ b/padogrid-deployment/src/main/resources/kafka/apps/perf_test/pom.xml
@@ -20,7 +20,7 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.kafka.addon</groupId>
-	<version>0.9.29-SNAPSHOT</version>
+	<version>padogrid_0.9.30-SNAPSHOT</version>
 	<artifactId>padogrid-perf_test</artifactId>
 	<packaging>pom</packaging>
 	<name>padogrid-perf_test</name>
