--- a/hazelcast-addon-jet-demo-3/pom.xml
+++ b/hazelcast-addon-jet-demo-3/pom.xml
@@ -22,7 +22,7 @@
 	<parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-parent</artifactId>
-		<version>0.9.29-SNAPSHOT</version>
+		<version>padogrid_0.9.30-SNAPSHOT</version>
 	</parent>
 	<artifactId>hazelcast-addon-jet-demo-3</artifactId>
 	<name>${project.artifactId}</name>
