--- a/kafka-addon-core/pom.xml
+++ b/kafka-addon-core/pom.xml
@@ -23,7 +23,7 @@
 	<parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-parent</artifactId>
-		<version>0.9.29-SNAPSHOT</version>
+		<version>padogrid_0.9.30-SNAPSHOT</version>
 	</parent>
 	<artifactId>kafka-addon-core</artifactId>
 	<packaging>jar</packaging>
