--- a/snappydata-addon-core/pom.xml
+++ b/snappydata-addon-core/pom.xml
@@ -26,7 +26,7 @@
 	<parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-parent</artifactId>
-		<version>0.9.29-SNAPSHOT</version>
+		<version>padogrid_0.9.30-SNAPSHOT</version>
 	</parent>
 	<artifactId>snappydata-addon-core</artifactId>
 	<packaging>jar</packaging>
