--- a/padogrid-all/padogrid-snappydata-all/pom.xml
+++ b/padogrid-all/padogrid-snappydata-all/pom.xml
@@ -26,7 +26,7 @@
 	<parent>
 		<groupId>padogrid.addon</groupId>
 		<artifactId>padogrid-all</artifactId>
-		<version>padogrid_0.9.30-SNAPSHOT</version>
+		<version>0.9.30-SNAPSHOT</version>
 	</parent>
 	<artifactId>padogrid-snappydata-all</artifactId>
 	<packaging>jar</packaging>
