--- a/padogrid-deployment/src/main/resources/geode/clusters/pom.xml
+++ b/padogrid-deployment/src/main/resources/geode/clusters/pom.xml
@@ -21,7 +21,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.geode.addon</groupId>
-	<version>padogrid_0.9.30-SNAPSHOT</version>
+	<version>0.9.30-SNAPSHOT</version>
 	<artifactId>geode-addon-cluster</artifactId>
 	<packaging>pom</packaging>
 	<name>geode-addon-perf_test</name>
