Added Hazelcast workflow example config files

--- a/padogrid-deployment/src/main/resources/hazelcast/etc/template-hazelcast-5.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/etc/template-hazelcast-5.yaml
@@ -68,17 +68,17 @@ hazelcast:
       enabled: true
       endpoint-groups:
         CLUSTER_READ:
-          enabled: false
+          enabled: true
         CLUSTER_WRITE:
-          enabled: false
+          enabled: true
         DATA:
-          enabled: false
+          enabled: true
         HEALTH_CHECK:
           enabled: true
         HOT_RESTART:
-          enabled: false
+          enabled: true
         WAN:
-          enabled: false
+          enabled: true
     join:
       multicast:
         enabled: false
