--- a/padogrid-deployment/src/main/resources/hazelcast/etc/template-hazelcast-workflow-3.yaml
+++ b/padogrid-deployment/src/main/resources/hazelcast/etc/template-hazelcast-workflow-3.yaml
@@ -22,8 +22,8 @@
 #   make sure to include all system properties found in this file. The following
 #   system properties are required:
 #
-#		"hazelcast-addon.cluster-name"
-#		         Cluster name. Disabled by default.
+#		"hazelcast-addon.group"
+#		         Group name. Disabled by default. Hard coded: "dev".
 #		         See below to see how to enable it.
 #		"hazelcast-addon.management-center"
 #		         MC URL.
@@ -36,14 +36,16 @@
 hazelcast:
   properties:
     hazelcast.phone.home.enabled: false
-
-  cluster-name: dev
-  # To use the workspace cluster name, remove the above line and uncomment 
-  # the following line.
-  #cluster-name: ${hazelcast-addon.cluster-name}
-  
+   
+  group:
+    name: dev
+    # To use the cluster name as the group name, comment out the following line.
+    #name: ${hazelcast-addon.group}
+        
   management-center:
+    enabled: true
     scripting-enabled: true
+    url: ${hazelcast-addon.management-center}
     
   user-code-deployment:
     enabled: true
@@ -63,17 +65,17 @@ hazelcast:
       enabled: true
       endpoint-groups:
         CLUSTER_READ:
-          enabled: true
+          enabled: false
         CLUSTER_WRITE:
-          enabled: true
+          enabled: false
         DATA:
-          enabled: true
+          enabled: false
         HEALTH_CHECK:
           enabled: true
         HOT_RESTART:
-          enabled: true
+          enabled: false
         WAN:
-          enabled: true
+          enabled: false
     join:
       multicast:
         enabled: false
@@ -84,13 +86,28 @@ hazelcast:
       enabled: false
     ssl:
       enabled: false
-  
-  native-memory:
-    enabled: true
-    size:
-      unit: MEGABYTES
-      value: 512
 
+  map:
+    map*:
+      near-cache:
+        max-idle-seconds: 100
+
+    # Indexes for nw data
+    nw/customers:
+      indexes:
+        country:
+          ordered: false
+      near-cache:
+        max-idle-seconds: 100
+    nw/orders:
+      indexes:
+        freight:
+          ordered: true
+        shipVia:
+          ordered: false
+      near-cache:
+        max-idle-seconds: 100
+    
   executor-service:
     hz:query:
       pool-size: 16
